# Cm

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  INSTALL  README.md  build.sh  calc3.h  compiler.c  parser.l  scanner.y
include/: AST.hpp  calc3.h  context.hpp  errors.hpp
res/: parser.y  program.txt  scanner.l
src/: AST.cpp  AST.h  asm.h  compiler.c  compiler.cpp  context.cpp  context.h  errors.h  main.cpp  parser.y  scanner.l
test/: CMakeLists.txt  test.cpp  test.hpp  testFor.cpp  testIf.cpp  testIfElse.cpp  testNotJz.cpp  testNotUsed.cpp  testReadOnly.cpp  testScope.cpp  testTypeMismatch.cpp  testUnary.cpp  testUninitialized.cpp  testWhile.cpp
