SET(TestIncludeFiles test.hpp)

ADD_EXECUTABLE(testIf testIf.cpp ${TestIncludeFiles})
ADD_EXECUTABLE(testIfElse testIfElse.cpp ${TestIncludeFiles})
ADD_EXECUTABLE(testReadOnly testReadOnly.cpp ${TestIncludeFiles})
ADD_EXECUTABLE(testTypeMismatch testTypeMismatch.cpp ${TestIncludeFiles})
ADD_EXECUTABLE(testUninitialized testUninitialized.cpp ${TestIncludeFiles})
ADD_EXECUTABLE(testWhile testWhile.cpp ${TestIncludeFiles})

TARGET_LINK_LIBRARIES(testIf CmLib)
TARGET_LINK_LIBRARIES(testIfElse CmLib)
TARGET_LINK_LIBRARIES(testReadOnly CmLib)
TARGET_LINK_LIBRARIES(testTypeMismatch CmLib)
TARGET_LINK_LIBRARIES(testUninitialized CmLib)
TARGET_LINK_LIBRARIES(testWhile CmLib)

ADD_TEST(NAME testIf COMMAND testIf COMMENT "Running testIf")
ADD_TEST(NAME testIfElse COMMAND testIfElse COMMENT "Running testIfElse")
ADD_TEST(NAME testReadOnly COMMAND testReadOnly COMMENT "Running testReadOnly")
ADD_TEST(NAME testTypeMismatch COMMAND testTypeMismatch COMMENT "Running testTypeMismatch")
ADD_TEST(NAME testUninitialized COMMAND testUninitialized COMMENT "Running testUninitialized")
ADD_TEST(NAME testWhile COMMAND testWhile COMMENT "Running testWhile")